--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
         "laravel/ui": "^4.5",
-        "nujan/esewa": "@dev"
+        "remotemerge/esewa-php-sdk": "^3.1"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
